--- a/ClientWPF/Interfaces/NewsWindow.xaml
+++ b/ClientWPF/Interfaces/NewsWindow.xaml
@@ -66,6 +66,15 @@
         </Button>
         <TextBox x:Name="inputNews" HorizontalAlignment="Left" Height="27" Margin="45,520,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="275" Background="Transparent" BorderThickness="0"/>
         <!--<Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="292,552,0,0" VerticalAlignment="Top" Width="42" Height="34" Click="Send_Click"/>-->
+
+        <TextBlock Text="Новости"
+                           FontWeight="Light"
+                           FontFamily="helvetica"
+                           FontSize="22"
+                           Foreground="White"
+                           HorizontalAlignment="Center" Margin="105,145,101,491"/>
+
+
         <!--<Кнопка отправить сообщение>-->
         <StackPanel   HorizontalAlignment="Right" RenderTransformOrigin="0.471,3.333" Margin="0,552,90,76" Width="140" >
             <StackPanel.Resources>
@@ -127,11 +136,11 @@
                     <TranslateTransform Y="-0.523"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="Отправить новость" Click="Send_Click" Margin="-80,0,-45,0" Height="41" />
+            <Button Template="{Binding Source={StaticResource ResourceKey=Button_Template}}" RenderTransformOrigin="1.194,3.333" Content="Опубликовать новость" Click="Send_Click" Margin="-80,0,-45,0" Height="41" />
 
         </StackPanel>
-        <TextBox x:Name="newsTextBox" HorizontalAlignment="Left" Height="336" Margin="33,149,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="307" FontSize="16" 
-            BorderBrush="White" Background="#600A4030"
+        <TextBox x:Name="newsTextBox" HorizontalAlignment="Left" Height="260" Margin="33,205,0,0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top" Width="307" FontSize="16" 
+            BorderBrush="White" Background="#600A4030" FontFamily="comic sans ms" Foreground="White" FontStyle="Italic" 
             Padding="10"/>
         <Label Content="Введите новость:" HorizontalAlignment="Left" FontWeight="Light" FontFamily="helvetica" Foreground="White" Margin="33,485,0,0" VerticalAlignment="Top" Width="162" Height="30"/>
         <Border
